--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 theme: jekyll-theme-midnight
 encoding: UTF-8
+kramdown:
+  # parse markdown inside block-level HTML tag (for "UCSC on one page" two columns)
+  parse_block_html: true
